<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ViewContactFragment">

    <TextView
        android:id="@+id/view_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/view_padding"
        android:text="@string/view_name_text_view_text"/>

    <TextView
        android:id="@+id/view_number_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/view_padding"
        android:text="@string/view_number_text_view_text"/>

    <TextView
        android:id="@+id/view_email_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/view_padding"
        android:text="@string/view_email_text_view_text"/>

    <TextView
        android:id="@+id/view_street_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/view_padding"
        android:text="@string/view_street_text_view_text"/>

    <TextView
        android:id="@+id/view_city_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/view_padding"
        android:text="@string/view_city_text_view_text"/>

    <TextView
        android:id="@+id/view_state_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/view_padding"
        android:text="@string/view_state_text_view_text"/>

    <TextView
        android:id="@+id/view_zip_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/view_padding"
        android:text="@string/view_zip_text_view_text"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/view_close_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_close_button_text"/>

        <Button
            android:id="@+id/view_delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_delete_button_text"/>

    </LinearLayout>


</LinearLayout>